--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.7.0
 anyio==4.9.0
+APScheduler==3.11.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+asyncio==3.4.3
 bandit==1.8.3
 bcrypt==4.3.0
 certifi==2025.1.31
@@ -12,6 +14,7 @@ Deprecated==1.2.18
 dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
+exceptiongroup==1.2.2
 fastapi==0.115.12
 fastapi-cli==0.0.7
 fastapi-csrf-protect==1.0.2
@@ -35,6 +38,7 @@ packaging==24.2
 pandas==2.2.3
 passlib==1.7.4
 pbr==6.1.1
+psutil==7.0.0
 pwdlib==0.2.1
 pyasn1==0.4.8
 pycparser==2.22
@@ -55,7 +59,6 @@ rich==14.0.0
 rich-toolkit==0.14.1
 rsa==4.9
 secure==1.0.1
-setuptools==78.1.0
 shellingham==1.5.4
 six==1.17.0
 slowapi==0.1.9
@@ -67,6 +70,7 @@ typing==3.7.4.3
 typing-inspection==0.4.0
 typing_extensions==4.13.1
 tzdata==2025.2
+tzlocal==5.3.1
 ujson==5.10.0
 uvicorn==0.34.0
 uvloop==0.21.0
