Added mods in .env.example backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb://MONGO_INITDB_ROOT_USERNAME:MONGO_INITDB_ROOT_PASSWORD@localhost:27017
 DATABASE_NAME=big_data_optimizer
 MONGO_INITDB_ROOT_USERNAME=big_data_optimizer
 MONGO_INITDB_ROOT_PASSWORD=secret123
