--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,4 @@ PROCESSING_HOURS=4,8,16,20
 VALIDATION_HOURS=2,6,10,14
 TOKEN_EXPIRATION_TIME=43800
 UPLOAD_DIR=/home/big_data_optimizer/uploads
+FRONTEND_URL=http://localhost:3000
