--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -14,7 +14,9 @@ services:
       uvicorn app.main:app
       --host 0.0.0.0
       --port 8000
-      --workers $(nproc)
+      --workers 4
+      --forwarded-allow-ips="*"
+      --proxy-headers
     volumes:
       - ${UPLOAD_DIR}:/app/backend/uploads
 
