added async worker arquitechture in backend to ensure background processes are executed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,5 @@ VALIDATION_HOURS=2,6,10,14
 TOKEN_EXPIRATION_TIME=43800
 UPLOAD_DIR=/home/big_data_optimizer/uploads
 FRONTEND_URL=http://localhost:3000
+WORKER_SECONDS_TIME=10
+MAX_FILE_SIZE=50
