--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -4,3 +4,5 @@ NEXT_PUBLIC_LINKEDIN_URL=https://www.linkedin.com/
 NEXT_PUBLIC_EMAIL=your_email@domain.com
 NEXT_PUBLIC_AUTHOR=Your Name
 NEXT_PUBLIC_UPLOAD_DIR=/home/big_data_optimizer/uploads
+NEXT_PUBLIC_MAX_FILE_SIZE=50
+NEXT_PUBLIC_SNACKBAR_DURATION=5000
