--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,4 @@ UPLOAD_DIR=/home/big_data_optimizer/uploads
 FRONTEND_URL=http://localhost:3000
 WORKER_SECONDS_TIME=10
 MAX_FILE_SIZE=50
+RECORDS_BATCH_SIZE=5000
