--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ bandit==1.8.3
 bcrypt==4.3.0
 certifi==2025.1.31
 cffi==1.17.1
+chardet==5.2.0
 click==8.1.8
 cryptography==44.0.2
 Deprecated==1.2.18
