Added processing in batches for user_initiated_processing and validation for changing parameters when there are change of their types

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,5 @@ FRONTEND_URL=http://localhost:3000
 WORKER_SECONDS_TIME=10
 MAX_FILE_SIZE=50
 RECORDS_BATCH_SIZE=5000
+PROCESSES_RECORDS_BATCH_SIZE=15000
+PROCESS_RESULTS_BATCH_SIZE=500
