--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -37,7 +37,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: big_data_optimizer_worker_async
+    # container_name: big_data_optimizer_worker_async
     restart: unless-stopped
     env_file:
       - ./backend/.env
