--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -34,6 +34,7 @@ services:
       - ${UPLOAD_DIR}:/app/backend/uploads
   
   worker_async:
+    pid: "host"
     build:
       context: ./backend
       dockerfile: Dockerfile
