--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ MONGO_BIND_IP=127.0.0.1,192.168.1.100
 UPLOAD_DIR=/home/big_data_optimizer/uploads
 MONGO_INITDB_ROOT_USERNAME=big_data_optimizer
 MONGO_INITDB_ROOT_PASSWORD=your_password_here
+SERVER_TIMEZONE=UTC
