Added metrics min in cpu usage graph and priviledged option for docker setup

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -37,6 +37,7 @@ services:
   
   worker_async:
     pid: "host"
+    #privileged: true Only if pid: "host" not working
     build:
       context: ./backend
       dockerfile: Dockerfile
