Added cgroup cpu measurement for linux environments inside cotainers

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,5 @@ MAX_FILE_SIZE=50
 RECORDS_BATCH_SIZE=5000
 PROCESSES_RECORDS_BATCH_SIZE=15000
 PROCESS_RESULTS_BATCH_SIZE=500
+USES_CGROUP_CPU_MEASUREMENT=True # Set to True if you want to use cgroup CPU measurement, otherwise set to False
+CGROUP_CPU_MEASUREMENT_PATH=/sys/fs/cgroup/cpu.stat # Path to the cgroup CPU measurement file
