Changed cpu average calculation based on if NEXT_PUBLIC_USES_CGROUP_CPU_MEASUREMENT is set

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -6,3 +6,4 @@ NEXT_PUBLIC_AUTHOR=Your Name
 NEXT_PUBLIC_UPLOAD_DIR=/home/big_data_optimizer/uploads
 NEXT_PUBLIC_MAX_FILE_SIZE=50
 NEXT_PUBLIC_SNACKBAR_DURATION=5000
+NEXT_PUBLIC_USES_CGROUP_CPU_MEASUREMENT=
